// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emptySpace > should work with border 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1xo4rxf0 styles_bordered_true__1xo4rxf1 styles_size_large__1xo4rxf2 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
    >
      <div
        class="styles__1xo4rxf5 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1.5rem_xxsmall__xf61n441 styles_justifyContent_center_xxsmall__xf61n461"
      >
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_center_xxsmall__xf61n461"
        >
          <div
            class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          >
            <p
              class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
              style="--textAlign__1giziax0: center;"
            >
              test
            </p>
          </div>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with image 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1xo4rxf0 styles_size_large__1xo4rxf2 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
    >
      <div
        class="styles__1xo4rxf5 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1.5rem_xxsmall__xf61n441 styles_justifyContent_center_xxsmall__xf61n461"
      >
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_center_xxsmall__xf61n461"
        >
          <img
            alt=""
            class="styles_large__1xo4rxf6"
            height="auto"
            src="/src/components/Data%20Display/EmptyState/__stories__/illustrations/kapsule.webp"
            width="auto"
          />
          <div
            class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          >
            <p
              class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
              style="--textAlign__1giziax0: center;"
            >
              test
            </p>
          </div>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with image as component 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1xo4rxf0 styles_size_large__1xo4rxf2 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
    >
      <div
        class="styles__1xo4rxf5 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1.5rem_xxsmall__xf61n441 styles_justifyContent_center_xxsmall__xf61n461"
      >
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_center_xxsmall__xf61n461"
        >
          <img
            alt="kapsule logo"
            src="/src/components/Data%20Display/EmptyState/__stories__/illustrations/kapsule.webp"
          />
          <div
            class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          >
            <p
              class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
              style="--textAlign__1giziax0: center;"
            >
              test
            </p>
          </div>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with learn more 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1xo4rxf0 styles_size_large__1xo4rxf2 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
    >
      <div
        class="styles__1xo4rxf5 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1.5rem_xxsmall__xf61n441 styles_justifyContent_center_xxsmall__xf61n461"
      >
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_center_xxsmall__xf61n461"
        >
          <div
            class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          >
            <p
              class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
              style="--textAlign__1giziax0: center;"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_center_xxsmall__xf61n461"
        >
          <a
            class="styles__1pc546m0 styles_prominence_default__1pc546m3 styles_sentiment_info__1pc546m2 styles_oneLine_false__1pc546m8 styles_variant_bodyStrong__1pc546mb styles_type_standalone__1pc546md styles_undefined_compound_4__1pc546mi styles__1pc546mn"
            data-variant="standalone"
            href="https://scaleway.com"
          >
            Learn more
            <svg
              aria-hidden="true"
              class="styles__1pc546mp uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzf uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </a>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with primary button 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1xo4rxf0 styles_size_large__1xo4rxf2 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
    >
      <div
        class="styles__1xo4rxf5 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1.5rem_xxsmall__xf61n441 styles_justifyContent_center_xxsmall__xf61n461"
      >
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_center_xxsmall__xf61n461"
        >
          <div
            class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          >
            <p
              class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
              style="--textAlign__1giziax0: center;"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_center_xxsmall__xf61n461"
        >
          <div
            class="styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v"
          >
            <button
              type="button"
            >
              Test
            </button>
          </div>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with secondary button 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1xo4rxf0 styles_size_large__1xo4rxf2 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
    >
      <div
        class="styles__1xo4rxf5 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1.5rem_xxsmall__xf61n441 styles_justifyContent_center_xxsmall__xf61n461"
      >
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_center_xxsmall__xf61n461"
        >
          <div
            class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          >
            <p
              class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
              style="--textAlign__1giziax0: center;"
            >
              test
            </p>
          </div>
        </div>
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_center_xxsmall__xf61n461"
        >
          <div
            class="styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j styles_gap_1rem_xxsmall__xf61n43v"
          >
            <button
              type="button"
            >
              Test
            </button>
          </div>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with size 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1xo4rxf0 styles_size_small__1xo4rxf4 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
    >
      <div
        class="styles__1xo4rxf5 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_center_xxsmall__xf61n461"
      >
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_center_xxsmall__xf61n461"
        >
          <div
            class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          >
            <p
              class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
              style="--textAlign__1giziax0: center;"
            >
              test
            </p>
          </div>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work with title 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1xo4rxf0 styles_size_large__1xo4rxf2 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
    >
      <div
        class="styles__1xo4rxf5 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1.5rem_xxsmall__xf61n441 styles_justifyContent_center_xxsmall__xf61n461"
      >
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_center_xxsmall__xf61n461"
        >
          <div
            class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          >
            <h2
              class="style__1do42ls0 style_prominence_strong__1do42ls5 style_sentiment_neutral__1do42lsb style_variant_headingSmall__1do42ls15 style_undefined_compound_1__1do42ls1b style_undefined_compound_65__1do42ls33"
              style="--textAlign__1giziax0: center;"
            >
              test
            </h2>
            <p
              class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
              style="--textAlign__1giziax0: center;"
            >
              test
            </p>
          </div>
        </div>
        content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`emptySpace > should work without parameters 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1xo4rxf0 styles_size_large__1xo4rxf2 styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d"
    >
      <div
        class="styles__1xo4rxf5 styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1.5rem_xxsmall__xf61n441 styles_justifyContent_center_xxsmall__xf61n461"
      >
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_1rem_xxsmall__xf61n43v styles_justifyContent_center_xxsmall__xf61n461"
        >
          <div
            class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
          >
            <p
              class="style__1do42ls0 style_prominence_default__1do42ls4 style_sentiment_neutral__1do42lsb style_variant_body__1do42lsj style_undefined_compound_0__1do42ls1a style_undefined_compound_64__1do42ls32"
              style="--textAlign__1giziax0: center;"
            >
              test
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
